add tests for ml-plugin